add real tests with test containers
